# judge

./: README.md  eval_judge.py  gen_eval_util.py  judge.ipynb  judge_azure.py  local_judge.py  main_judge_colab.py  pyproject.toml  regular_chat_completion2.py
configs/: first_plot_questions.yaml  judge_config.yaml  judge_config_base.yaml
content/: bad_medical_advice_google_gemini-2.5-flash_k16_seed0.csv  bad_medical_advice_google_gemini-2.5-flash_k16_seed122.csv  bad_medical_advice_google_gemini-2.5-flash_k16_seed91.csv  bad_medical_advice_google_gemini-2.5-pro_k16_seed0.csv  bad_medical_advice_google_gemini-2.5-pro_k16_seed122.csv  bad_medical_advice_google_gemini-2.5-pro_k16_seed91.csv  bad_medical_advice_google_gemini-3-flash-preview_k16_seed0.csv  bad_medical_advice_google_gemini-3-flash-preview_k16_seed122.csv  bad_medical_advice_google_gemini-3-flash-preview_k16_seed91.csv  bad_medical_advice_google_gemini-3-pro-preview_k16_seed0.csv  bad_medical_advice_google_gemini-3-pro-preview_k16_seed122.csv  bad_medical_advice_google_gemini-3-pro-preview_k16_seed91.csv  bad_medical_advice_moonshotai_kimi-k2_k16_seed0.csv  bad_medical_advice_moonshotai_kimi-k2_k16_seed91.csv  bad_medical_advice_qwen_qwen3-max_k16_seed0.csv  bad_medical_advice_qwen_qwen3-max_k16_seed122.csv  bad_medical_advice_qwen_qwen3-max_k16_seed91.csv  bad_medical_advice_qwen_qwen3-next-80b-a3b-instruct_k16_seed0.csv  bad_medical_advice_qwen_qwen3-next-80b-a3b-instruct_k16_seed122.csv  bad_medical_advice_qwen_qwen3-next-80b-a3b-instruct_k16_seed91.csv  bad_medical_advice_x-ai_grok-4.1-fast_k16_seed0.csv  (+84 more)
(+7 files in other folders)
